--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "REMS",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,6 +19,9 @@
     "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
     "mongoose": "^6.1.3",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "netlify-cli": "^12.7.2",
+    "netlify-lambda": "^2.0.16",
+    "serverless-http": "^2.7.0"
   }
 }
